--- a/scotapp/TODO
+++ b/scotapp/TODO
@@ -7,7 +7,7 @@
         rm -rf Geo*.tar.gz
 
 2 mongodb connection strings as secrets
-3 scot logs to stdout. tried once, not working :(
+fixed sort of. need to clean up 3 scot logs to stdout. tried once, not working :(
 4 unit testing
 5 isready for scot and dependancies within ns
 6 subdir in okd builder scotapp
@@ -15,6 +15,9 @@
 8 document api reality (fields in data, not outside)
 9 refactor elasticproxy (mabye other es module too?)
 10 dark mode obviously
+11 misp/coretex enrichers?
+12 es index creation
+
 
 reflair
 game
@@ -38,6 +41,17 @@ podman run -it --user root --entrypoint /bin/bash newscot1
 
 bugs
 ----
+cant get hostname in dev env set static for now
 tasks deleted do not update linked stuff and never go away? works in demo
+    tasks and entries are the same?
 entries field nees to be wider
-delete does not update browser (mq?)
+delete does not update browser (mq?) alerts do, alertgroups no does not work in demo
+no browser notifications
+crazy cookie with lpaW s
+change history?
+tags from alert to event
+cant tag alerts from tasks or delete alerts
+cant rename alerts or alertgroups
+pending flair messages for flairer queue
+tags dont flow to events
+delete incident doesnt update event to "unpromoted"?
