--- a/scotapp/TODO
+++ b/scotapp/TODO
@@ -1,13 +1,6 @@
-1 GEOIP on scot image
-
-    RUN cd /usr/share/GeoIP/ && \ 
-        curl -k -s -S https://geolite.maxmind.com/download/geoip/database/GeoLite2-City.tar.gz | tar -xz && mv GeoLite2-City_*/GeoLite2-City.mmdb ./GeoIP2-City.mmdb && \ 
-        curl -k -s -S https://geolite.maxmind.com/download/geoip/database/GeoLite2-Country.tar.gz | tar -xz && mv GeoLite2-Country_*/GeoLite2-Country.mmdb ./GeoIP2-Country.mmdb && \ 
-        curl -k -s -S https://geolite.maxmind.com/download/geoip/database/GeoLite2-ASN.tar.gz | tar -xz && mv GeoLite2-ASN_*/GeoLite2-ASN.mmdb ./GeoIP2-ISP.mmdb && \ 
-        rm -rf Geo*.tar.gz
-
+done 10/5/2022 - 1 GEOIP on scot image
 2 mongodb connection strings as secrets
-fixed sort of. need to clean up 3 scot logs to stdout. tried once, not working :(
+fixed sort of. need to clean up 10/4/2022 - 3 scot logs to stdout. tried once, not working :(
 4 unit testing
 5 isready for scot and dependancies within ns
 6 subdir in okd builder scotapp
@@ -17,13 +10,11 @@ fixed sort of. need to clean up 3 scot logs to stdout. tried once, not working :
 10 dark mode obviously
 11 misp/coretex enrichers?
 12 es index creation
-13 redo docker once more
+done 10/5/2022 - 13 redo docker once more
 14 split different perl apps into minimial sets for containers
 15 increment user collection in init!
+16 entity > observable
 
-reflair
-game
-rfproxy not needed r/n recorded future thing use as api example
 
 
 tested dev on ubuntu 22.04 w perl 5.34 no issue
@@ -34,7 +25,7 @@ entrypoints for other agents
 Stretch     hypnotoad -f ./Stretch.pl
 Flair       hypnotoad -f ./Flair.pl
 Game        perl Game.pl (cron)
-Alert       ?
+see bins in root
 
 enter container as root without running entrypoint
 
@@ -46,7 +37,6 @@ bugs
 cant get hostname in dev env set static for now
 tasks deleted do not update linked stuff and never go away? works in demo
     tasks and entries are the same?
-entries field nees to be wider
 delete does not update browser (mq?) alerts do, alertgroups no does not work in demo
 no browser notifications
 crazy cookie with lpaW s
@@ -59,10 +49,25 @@ tags dont flow to events
 delete incident doesnt update event to "unpromoted"?
 create task: fail to get entity detail id information
 flairer note creating es entities on alert create/flair?
-undefined incident handler causes problems crash js in browser?
-
+undefined incident handler causes problems crash npm dev server / in browser?
+pending messages in emlat queue in amq
+viewports change on delete when list is large
+Userconfig.js "Warning: <Broadcast> is deprecated and will be removed in the next major release. Please use createContext instead. See https://goo.gl/QAF37J for more info."
+wierd duplication in links dialog
+scotforcegraph broken!
+entity window says green audit button but it is white
 
 
 
 forced npm modules:
 react-time
+
+
+
+
+
+geoip instructions
+1 signup for GeoLite2
+2 download city, country and asn gzips
+3 Extract mmdbs to root of app /scotapp
+Expects GeoLite2-ASN|CIty|Country.mmdb
