--- a/scotapp/TODO
+++ b/scotapp/TODO
@@ -16,7 +16,7 @@ done 10/5/2022 - 13 redo docker once more
 16 entity > observable
 17 location > customer/tenant
 18 no manually specify even id when adding alert to existing event
-
+19 entity locations (global or tenant? for ex. local ips)
 
 
 tested dev on ubuntu 22.04 w perl 5.34 no issue
